--- a/Project/styles/style login.css
+++ b/Project/styles/style login.css
@@ -1,5 +1,5 @@
 .background {
-    background-image: url(/images/beach\ image.jpg);
+    background-image: url(/Project/images/beach\ image.jpg);
     background-size: cover;
     height: 100vh;
     width: 100vw;
