--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,5 +1,5 @@
 .favourite-places-bg-container {
-    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/towerbg.png");
+    background-image: url("/public/images/home\ img.png");
     height: 100vh;
     background-size: cover;
   }
