--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,6 +2,7 @@
     background-image: url("/public/images/home\ img.png");
     height: 100vh;
     background-size: cover;
+    background-color: aquamarine;
   }
   
   .favourite-places-heading {
